# agentic-workflow-discovery

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  serve.py
.github/workflows/: ci.yml
configs/: default.yaml
notebooks/: demo.ipynb
scripts/: benchmark_inference.py  generate_mock_data.py  run_pipeline.py
src/agentic_workflow_discovery/graph/: __init__.py  builder.py  cluster.py  metrics.py
src/agentic_workflow_discovery/ingestion/: __init__.py  cleaner.py  pipeline.py  schemas.py  splitter.py
src/agentic_workflow_discovery/model/: __init__.py  dataset.py  lstm_model.py  predictor.py  tokenizer.py  trainer.py
src/agentic_workflow_discovery/optimization/: __init__.py  controller.py  cost.py  threshold.py
src/agentic_workflow_discovery/pipeline/: __init__.py  orchestrator.py
tests/: conftest.py
tests/test_graph/: test_clustering.py  test_transition.py
tests/test_ingestion/: test_cleaner.py  test_splitter.py
tests/test_model/: test_latency_budget.py  test_overfitting.py  test_temporal_leakage.py  test_tokenizer.py
tests/test_optimization/: test_asymmetric_cost.py  test_threshold_roc.py
tests/test_pipeline/: test_end_to_end.py
