[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workflow-discovery"
version = "0.1.0"
description = "Agentic Workflow Discovery & Interface Automation Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "pyarrow>=16.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks latency benchmarks",
]
filterwarnings = [
    "error",
    # sklearn warns when the adjacency matrix isn't symmetric before
    # spectral clustering; we explicitly symmetrize it ourselves.
    'ignore:Array is not symmetric:UserWarning',
]
